# tolk

./: .gitignore  CMakeLists.txt  build.bat
.github/workflows/: build.yml
docs/: CMakeLists.txt  README.md
libs/x64/: boyctrl.ini  byctrl.conf
libs/x86/: BoyCtrl.conf  boyctrl.ini  byctrl.conf  config.ini
src/: CMakeLists.txt  ScreenReaderDriver.h  ScreenReaderDriverBOY.cpp  ScreenReaderDriverBOY.h  ScreenReaderDriverJAWS.cpp  ScreenReaderDriverJAWS.h  ScreenReaderDriverNVDA.cpp  ScreenReaderDriverNVDA.h  ScreenReaderDriverSA.cpp  ScreenReaderDriverSA.h  ScreenReaderDriverSAPI.cpp  ScreenReaderDriverSAPI.h  ScreenReaderDriverSNova.cpp  ScreenReaderDriverSNova.h  ScreenReaderDriverWE.cpp  ScreenReaderDriverWE.h  ScreenReaderDriverZDSR.cpp  ScreenReaderDriverZDSR.h  ScreenReaderDriverZT.cpp  ScreenReaderDriverZT.h  Tolk.cpp  TolkJNI.cpp
src/dotnet/: CMakeLists.txt  Tolk.cs
src/java/: CMakeLists.txt
src/python/: Tolk.py
